// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Buttons with icons renders correctly idle state 1`] = `
Array [
  <button
    className="css-tn4srk"
    title="Click me right meow!"
    type="button"
  >
    <svg
      className="css-16vc0kf"
      viewBox="0 0 16 16"
    >
      <use
        xlinkHref="#ok"
      />
    </svg>
    Click me
  </button>,
  <button
    className="css-e7ftki"
    type="button"
  >
    <svg
      className="css-16vc0kf"
      viewBox="0 0 16 16"
    >
      <use
        xlinkHref="#ok"
      />
    </svg>
    Click me
  </button>,
  <button
    className="css-is0nsl"
    type="button"
  >
    <svg
      className="css-16vc0kf"
      viewBox="0 0 16 16"
    >
      <use
        xlinkHref="#ok"
      />
    </svg>
    Click me
  </button>,
  <button
    className="css-1mv9fxt"
    type="button"
  >
    <svg
      className="css-16vc0kf"
      viewBox="0 0 16 16"
    >
      <use
        xlinkHref="#ok"
      />
    </svg>
    Click me
  </button>,
  <button
    className="css-qd7hfa"
    type="button"
  >
    <svg
      className="css-16vc0kf"
      viewBox="0 0 16 16"
    >
      <use
        xlinkHref="#ok"
      />
    </svg>
    Click me
  </button>,
  <button
    className="css-1941dy4"
    disabled={true}
    type="button"
  >
    <svg
      className="css-16vc0kf"
      viewBox="0 0 16 16"
    >
      <use
        xlinkHref="#ok"
      />
    </svg>
    Click me
  </button>,
  <button
    className="css-18d33g0"
    title="Click me right meow!"
    type="button"
  >
    <svg
      className="css-16vc0kf"
      viewBox="0 0 16 16"
    >
      <use
        xlinkHref="#ok"
      />
    </svg>
    Click me
  </button>,
  <button
    className="css-26hg8s"
    type="button"
  >
    <svg
      className="css-16vc0kf"
      viewBox="0 0 16 16"
    >
      <use
        xlinkHref="#ok"
      />
    </svg>
    Click me
  </button>,
  <button
    className="css-thrwxp"
    type="button"
  >
    <svg
      className="css-16vc0kf"
      viewBox="0 0 16 16"
    >
      <use
        xlinkHref="#ok"
      />
    </svg>
    Click me
  </button>,
  <button
    className="css-1hlxw4b"
    type="button"
  >
    <svg
      className="css-16vc0kf"
      viewBox="0 0 16 16"
    >
      <use
        xlinkHref="#ok"
      />
    </svg>
    Click me
  </button>,
  <button
    className="css-1cy0jul"
    type="button"
  >
    <svg
      className="css-16vc0kf"
      viewBox="0 0 16 16"
    >
      <use
        xlinkHref="#ok"
      />
    </svg>
    Click me
  </button>,
  <button
    className="css-1iej6vy"
    disabled={true}
    type="button"
  >
    <svg
      className="css-16vc0kf"
      viewBox="0 0 16 16"
    >
      <use
        xlinkHref="#ok"
      />
    </svg>
    Click me
  </button>,
]
`;

exports[`Buttons with icons renders correctly loading state 1`] = `
Array [
  <button
    className="css-1uw9rnj"
    title="Click me right meow!"
    type="button"
  >
    <svg
      className="css-16vc0kf"
      viewBox="0 0 16 16"
    >
      <use
        xlinkHref="#ok"
      />
    </svg>
    Click me
    <div
      className="css-9lvo7z"
    >
      <svg
        className="css-y04s82"
        viewBox="0 0 128 128"
      >
        <use
          xlinkHref="#icon-spinner"
        />
      </svg>
    </div>
  </button>,
  <button
    className="css-1ndsj8n"
    type="button"
  >
    <svg
      className="css-16vc0kf"
      viewBox="0 0 16 16"
    >
      <use
        xlinkHref="#ok"
      />
    </svg>
    Click me
    <div
      className="css-9lvo7z"
    >
      <svg
        className="css-1xsffl2"
        viewBox="0 0 128 128"
      >
        <use
          xlinkHref="#icon-spinner"
        />
      </svg>
    </div>
  </button>,
  <button
    className="css-o1gpzn"
    type="button"
  >
    <svg
      className="css-16vc0kf"
      viewBox="0 0 16 16"
    >
      <use
        xlinkHref="#ok"
      />
    </svg>
    Click me
    <div
      className="css-9lvo7z"
    >
      <svg
        className="css-13lrbql"
        viewBox="0 0 128 128"
      >
        <use
          xlinkHref="#icon-spinner"
        />
      </svg>
    </div>
  </button>,
  <button
    className="css-mmlirs"
    type="button"
  >
    <svg
      className="css-16vc0kf"
      viewBox="0 0 16 16"
    >
      <use
        xlinkHref="#ok"
      />
    </svg>
    Click me
    <div
      className="css-9lvo7z"
    >
      <svg
        className="css-13lrbql"
        viewBox="0 0 128 128"
      >
        <use
          xlinkHref="#icon-spinner"
        />
      </svg>
    </div>
  </button>,
  <button
    className="css-saixbd"
    type="button"
  >
    <svg
      className="css-16vc0kf"
      viewBox="0 0 16 16"
    >
      <use
        xlinkHref="#ok"
      />
    </svg>
    Click me
    <div
      className="css-9lvo7z"
    >
      <svg
        className="css-13lrbql"
        viewBox="0 0 128 128"
      >
        <use
          xlinkHref="#icon-spinner"
        />
      </svg>
    </div>
  </button>,
  <button
    className="css-1941dy4"
    disabled={true}
    type="button"
  >
    <svg
      className="css-16vc0kf"
      viewBox="0 0 16 16"
    >
      <use
        xlinkHref="#ok"
      />
    </svg>
    Click me
  </button>,
  <button
    className="css-14uxtxq"
    title="Click me right meow!"
    type="button"
  >
    <svg
      className="css-16vc0kf"
      viewBox="0 0 16 16"
    >
      <use
        xlinkHref="#ok"
      />
    </svg>
    Click me
    <div
      className="css-9lvo7z"
    >
      <svg
        className="css-y04s82"
        viewBox="0 0 128 128"
      >
        <use
          xlinkHref="#icon-spinner"
        />
      </svg>
    </div>
  </button>,
  <button
    className="css-14vktva"
    type="button"
  >
    <svg
      className="css-16vc0kf"
      viewBox="0 0 16 16"
    >
      <use
        xlinkHref="#ok"
      />
    </svg>
    Click me
    <div
      className="css-9lvo7z"
    >
      <svg
        className="css-1xsffl2"
        viewBox="0 0 128 128"
      >
        <use
          xlinkHref="#icon-spinner"
        />
      </svg>
    </div>
  </button>,
  <button
    className="css-p1kq10"
    type="button"
  >
    <svg
      className="css-16vc0kf"
      viewBox="0 0 16 16"
    >
      <use
        xlinkHref="#ok"
      />
    </svg>
    Click me
    <div
      className="css-9lvo7z"
    >
      <svg
        className="css-13lrbql"
        viewBox="0 0 128 128"
      >
        <use
          xlinkHref="#icon-spinner"
        />
      </svg>
    </div>
  </button>,
  <button
    className="css-19kdv40"
    type="button"
  >
    <svg
      className="css-16vc0kf"
      viewBox="0 0 16 16"
    >
      <use
        xlinkHref="#ok"
      />
    </svg>
    Click me
    <div
      className="css-9lvo7z"
    >
      <svg
        className="css-13lrbql"
        viewBox="0 0 128 128"
      >
        <use
          xlinkHref="#icon-spinner"
        />
      </svg>
    </div>
  </button>,
  <button
    className="css-1vxzg5x"
    type="button"
  >
    <svg
      className="css-16vc0kf"
      viewBox="0 0 16 16"
    >
      <use
        xlinkHref="#ok"
      />
    </svg>
    Click me
    <div
      className="css-9lvo7z"
    >
      <svg
        className="css-13lrbql"
        viewBox="0 0 128 128"
      >
        <use
          xlinkHref="#icon-spinner"
        />
      </svg>
    </div>
  </button>,
  <button
    className="css-1iej6vy"
    disabled={true}
    type="button"
  >
    <svg
      className="css-16vc0kf"
      viewBox="0 0 16 16"
    >
      <use
        xlinkHref="#ok"
      />
    </svg>
    Click me
  </button>,
]
`;

exports[`Simple buttons renders correctly idle state 1`] = `
Array [
  <button
    className="css-tn4srk"
    title="Click me right meow!"
    type="button"
  >
    Click me
  </button>,
  <button
    className="css-e7ftki"
    type="button"
  >
    Click me
  </button>,
  <button
    className="css-is0nsl"
    type="button"
  >
    Click me
  </button>,
  <button
    className="css-1mv9fxt"
    type="button"
  >
    Click me
  </button>,
  <button
    className="css-qd7hfa"
    type="button"
  >
    Click me
  </button>,
  <button
    className="css-1941dy4"
    disabled={true}
    type="button"
  >
    Click me
  </button>,
  <button
    className="css-18d33g0"
    title="Click me right meow!"
    type="button"
  >
    Click me
  </button>,
  <button
    className="css-26hg8s"
    type="button"
  >
    Click me
  </button>,
  <button
    className="css-thrwxp"
    type="button"
  >
    Click me
  </button>,
  <button
    className="css-1hlxw4b"
    type="button"
  >
    Click me
  </button>,
  <button
    className="css-1cy0jul"
    type="button"
  >
    Click me
  </button>,
  <button
    className="css-1iej6vy"
    disabled={true}
    type="button"
  >
    Click me
  </button>,
  <button
    className="css-t5fev8"
    title="Click me right meow!"
    type="button"
  >
    Click me
  </button>,
  <button
    className="css-9900zw"
    type="button"
  >
    Click me
  </button>,
  <button
    className="css-1eaviod"
    type="button"
  >
    Click me
  </button>,
  <button
    className="css-15mi4bs"
    type="button"
  >
    Click me
  </button>,
  <button
    className="css-15skzu2"
    type="button"
  >
    Click me
  </button>,
  <button
    className="css-1jwvlvs"
    disabled={true}
    type="button"
  >
    Click me
  </button>,
]
`;

exports[`Simple buttons renders correctly loading state 1`] = `
Array [
  <button
    className="css-1uw9rnj"
    title="Click me right meow!"
    type="button"
  >
    Click me
    <div
      className="css-9lvo7z"
    >
      <svg
        className="css-y04s82"
        viewBox="0 0 128 128"
      >
        <use
          xlinkHref="#icon-spinner"
        />
      </svg>
    </div>
  </button>,
  <button
    className="css-1ndsj8n"
    type="button"
  >
    Click me
    <div
      className="css-9lvo7z"
    >
      <svg
        className="css-1xsffl2"
        viewBox="0 0 128 128"
      >
        <use
          xlinkHref="#icon-spinner"
        />
      </svg>
    </div>
  </button>,
  <button
    className="css-o1gpzn"
    type="button"
  >
    Click me
    <div
      className="css-9lvo7z"
    >
      <svg
        className="css-13lrbql"
        viewBox="0 0 128 128"
      >
        <use
          xlinkHref="#icon-spinner"
        />
      </svg>
    </div>
  </button>,
  <button
    className="css-mmlirs"
    type="button"
  >
    Click me
    <div
      className="css-9lvo7z"
    >
      <svg
        className="css-13lrbql"
        viewBox="0 0 128 128"
      >
        <use
          xlinkHref="#icon-spinner"
        />
      </svg>
    </div>
  </button>,
  <button
    className="css-saixbd"
    type="button"
  >
    Click me
    <div
      className="css-9lvo7z"
    >
      <svg
        className="css-13lrbql"
        viewBox="0 0 128 128"
      >
        <use
          xlinkHref="#icon-spinner"
        />
      </svg>
    </div>
  </button>,
  <button
    className="css-1941dy4"
    disabled={true}
    type="button"
  >
    Click me
  </button>,
  <button
    className="css-14uxtxq"
    title="Click me right meow!"
    type="button"
  >
    Click me
    <div
      className="css-9lvo7z"
    >
      <svg
        className="css-y04s82"
        viewBox="0 0 128 128"
      >
        <use
          xlinkHref="#icon-spinner"
        />
      </svg>
    </div>
  </button>,
  <button
    className="css-14vktva"
    type="button"
  >
    Click me
    <div
      className="css-9lvo7z"
    >
      <svg
        className="css-1xsffl2"
        viewBox="0 0 128 128"
      >
        <use
          xlinkHref="#icon-spinner"
        />
      </svg>
    </div>
  </button>,
  <button
    className="css-p1kq10"
    type="button"
  >
    Click me
    <div
      className="css-9lvo7z"
    >
      <svg
        className="css-13lrbql"
        viewBox="0 0 128 128"
      >
        <use
          xlinkHref="#icon-spinner"
        />
      </svg>
    </div>
  </button>,
  <button
    className="css-19kdv40"
    type="button"
  >
    Click me
    <div
      className="css-9lvo7z"
    >
      <svg
        className="css-13lrbql"
        viewBox="0 0 128 128"
      >
        <use
          xlinkHref="#icon-spinner"
        />
      </svg>
    </div>
  </button>,
  <button
    className="css-1vxzg5x"
    type="button"
  >
    Click me
    <div
      className="css-9lvo7z"
    >
      <svg
        className="css-13lrbql"
        viewBox="0 0 128 128"
      >
        <use
          xlinkHref="#icon-spinner"
        />
      </svg>
    </div>
  </button>,
  <button
    className="css-1iej6vy"
    disabled={true}
    type="button"
  >
    Click me
  </button>,
  <button
    className="css-16bp3f5"
    title="Click me right meow!"
    type="button"
  >
    Click me
    <div
      className="css-9lvo7z"
    >
      <svg
        className="css-y04s82"
        viewBox="0 0 128 128"
      >
        <use
          xlinkHref="#icon-spinner"
        />
      </svg>
    </div>
  </button>,
  <button
    className="css-166adhp"
    type="button"
  >
    Click me
    <div
      className="css-9lvo7z"
    >
      <svg
        className="css-1xsffl2"
        viewBox="0 0 128 128"
      >
        <use
          xlinkHref="#icon-spinner"
        />
      </svg>
    </div>
  </button>,
  <button
    className="css-13qid7o"
    type="button"
  >
    Click me
    <div
      className="css-9lvo7z"
    >
      <svg
        className="css-13lrbql"
        viewBox="0 0 128 128"
      >
        <use
          xlinkHref="#icon-spinner"
        />
      </svg>
    </div>
  </button>,
  <button
    className="css-b3ogk2"
    type="button"
  >
    Click me
    <div
      className="css-9lvo7z"
    >
      <svg
        className="css-13lrbql"
        viewBox="0 0 128 128"
      >
        <use
          xlinkHref="#icon-spinner"
        />
      </svg>
    </div>
  </button>,
  <button
    className="css-4ju0m3"
    type="button"
  >
    Click me
    <div
      className="css-9lvo7z"
    >
      <svg
        className="css-13lrbql"
        viewBox="0 0 128 128"
      >
        <use
          xlinkHref="#icon-spinner"
        />
      </svg>
    </div>
  </button>,
  <button
    className="css-1jwvlvs"
    disabled={true}
    type="button"
  >
    Click me
  </button>,
]
`;
